test_fixtures/if/var_in_then.lox
// ParserError: UnexpectedExpressionToken found Var from l2c11 to l2c14
if (true) var foo;
